2005-07-16  Michael Margraf   <michael.margraf@alumni.tu-berlin.de>

	* property text position of subcircuit does not change
	by saving subcircuit
	* fixed bug: no changed after changing variable name
	* fixed bug: not restore font properties after write
	painting text
	*fixed bug: creating wrong wire starting point

2005-07-14  Michael Margraf   <michael.margraf@alumni.tu-berlin.de>

	* fixed segfault on insert diagram on untitled page
	* fixed bug on rotating text paintings
	* fixed bug on rotating text in subcircuit symbols

2005-06-25  Michael Margraf   <michael.margraf@alumni.tu-berlin.de>

	* some more LaTeX tags for texts
	* simulation warning reset before simulation starts
	* save 4 digits for unicode in text painting
	* QucsLib: change component with cursor up/down
	* repaint after return in property line edit
	* fixed bug that erases port names at undo/redo
	* fixed bug placing menu on right mouse click during paste

2005-06-09  Michael Margraf   <michael.margraf@alumni.tu-berlin.de>

	* new tool: library manager
	* ports in schematic symbol show their names instead of their
	numbers, they also can now be rotated
	* diagram labels and grafik text can now contain special
	characters (e.g. greek letters)
	* some work for re-structure
	* avoid selections of graph and marker during printing
	* speed up loading datasets
	* fixed bug at splitting labeled wires
	* fixed bug that cut off digits in scientific numbers
	* error message for variable in tabular if other indep
	variables then the first
	* fixed bug in printing reversed logarithmic axis in 3D
	diagram
	* search dialog for QucsLib
	* correct size for simulation component schemes
	* precise component text boundings
	* text in statusbar if warnings in simulation
	* 3D diagram dialog: show 2D projection preview
	* little gap between graph and diagram boundings for Cartesian

2005-05-21  Michael Margraf   <michael.margraf@alumni.tu-berlin.de>

	* fixed bug scaling independent x axis in Cartesian diagram
